# simplemathspy

./: 404.html  index.html  objects.inv  pyproject.toml  sitemap.xml
API/: index.html
assets/readme/: index.html
code-examples/: index.html
docs/: API.md
search/: search_index.json
src/simplemathspy/: __init__.py  add_fourteen.py  mitch.py  multiply3.py  multiplydivide.py  pctformat.py  root_numbers.py  terrible_multiply.py
tests/: conftest.py  test_mitchell.py  test_template_package.py
